changes in scripts and some styles to repaire header affix collapse and expand effect

--- a/assets/src/scss/theme/custom.scss
+++ b/assets/src/scss/theme/custom.scss
@@ -173,8 +173,9 @@ ol {
   padding: 0;
   background-color: #ffffff;
   box-shadow: 0 2px 5px 0px rgba(0,0,0,0.1);
-  top: -100px;
-  transition: top 0.3s ease-in-out;
+  // top: -100px;
+  transition: top 0.2s ease-in-out;
+  position: relative;
 
   .navbar-default {
       padding: 15px 0;
@@ -189,6 +190,7 @@ ol {
       padding: 5px 0 5px 0 !important;
       height: 50px !important;
       overflow: hidden;
+      transition: none;
 
       img {
         width: auto;
